Add candidate plan trace
